edited some styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Speed Typer</title>
+    <title>Quick Keys</title>
   </head>
   <body>
     <button id="settings-btn" class="settings-btn">
@@ -32,6 +32,7 @@
     </div>
 
     <div id="topic-container" class="topic-container">
+      <h2>Quick Keys</h2>
       <h4>Choose your topic!</h4>
       <input
         type="text"
@@ -44,7 +45,7 @@
     </div>
 
     <div class="container">
-      <h2>Speed Typer</h2>
+      <br /><br /><br />
       <small>Type the following:</small>
 
       <h1 id="word"></h1>
